--- a/software/server/src/main/resources/application.properties
+++ b/software/server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/trackme_db
 spring.datasource.username=trackmeadmin
 spring.datasource.password=password
