--- a/software/server/pom.xml
+++ b/software/server/pom.xml
@@ -57,6 +57,17 @@
             <artifactId>modelmapper</artifactId>
             <version>1.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-websocket</artifactId>
+            <version>4.2.4.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-messaging</artifactId>
+            <version>4.2.4.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
