Brief: MVP architecture, register activity Added MVP architecture Added Register activity (have to implement the real request) Finished Login activity

--- a/software/client/app/src/main/AndroidManifest.xml
+++ b/software/client/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.github.ferrantemattarutigliano.software.client">
 
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,13 +12,20 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".MainActivity">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.HomeGuestActivity" />
+        <activity
+            android:name=".activity.RegistrationActivity"
+            android:label="@string/title_activity_registration"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".activity.IndividualProfileActivity" />
+        <activity android:name=".activity.ThirdPartyProfileActivity" />
     </application>
 
 </manifest>
