--- a/software/client/app/src/main/AndroidManifest.xml
+++ b/software/client/app/src/main/AndroidManifest.xml
@@ -4,6 +4,13 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the 'MyLocation' functionality. 
+    -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,20 +26,35 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.HomeGuestActivity" />
+        <activity android:name=".activity.GuestHomeActivity" />
         <activity
             android:name=".activity.RegistrationActivity"
             android:label="@string/title_activity_registration"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".activity.individual.HomeIndividualActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:name=".activity.individual.IndividualHomeActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".activity.thirdparty.HomeThirdPartyActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:name=".activity.thirdparty.ThirdPartyHomeActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activity.thirdparty.ThirdPartyRequestActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <activity
+            android:name=".activity.individual.RunMapActivity"
+            android:label="@string/title_activity_run_map"></activity>
     </application>
 
 </manifest>
