--- a/software/client/app/src/main/AndroidManifest.xml
+++ b/software/client/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.GuestHomeActivity" />
+        <activity android:name=".activity.LoginActivity" />
         <activity
             android:name=".activity.RegistrationActivity"
             android:label="@string/title_activity_registration"
@@ -54,7 +54,7 @@
 
         <activity
             android:name=".activity.individual.RunMapActivity"
-            android:label="@string/title_activity_run_map"></activity>
+            android:label="@string/title_activity_run_map" />
     </application>
 
 </manifest>
