--- a/software/client/app/build.gradle
+++ b/software/client/app/build.gradle
@@ -10,9 +10,6 @@ android {
         exclude 'META-INF/NOTICE.txt'
         exclude 'META-INF/notice.txt'
         exclude 'META-INF/ASL2.0'
-        exclude 'META-INF/spring.schemas'
-        exclude 'META-INF/spring.tooling'
-        exclude 'META-INF/spring.handlers'
     }
     compileSdkVersion 28
     defaultConfig {
@@ -57,6 +54,8 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.squareup.okhttp3:okhttp:3.12.0'
+    implementation 'org.osmdroid:osmdroid-android:6.0.2'
+    implementation 'com.github.MKergall:osmbonuspack:6.5.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
