--- a/software/client/app/src/main/AndroidManifest.xml
+++ b/software/client/app/src/main/AndroidManifest.xml
@@ -39,7 +39,7 @@
         <activity
             android:name=".activity.thirdparty.ThirdPartyViewDataActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".activity.individual.IndividualMapActivity" />
+        <activity android:name=".activity.individual.IndividualCreateMapActivity" />
         <activity android:name=".activity.individual.IndividualCreatedRunsActivity" />
         <activity android:name=".activity.individual.IndividualWatchedRunsActivity" />
         <activity android:name=".activity.individual.IndividualEnrolledRunsActivity" />
