--- a/software/client/app/src/main/AndroidManifest.xml
+++ b/software/client/app/src/main/AndroidManifest.xml
@@ -9,23 +9,21 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/trackme_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/trackme_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".activity.LoginActivity" />
         <activity
             android:name=".activity.RegistrationActivity"
-            android:label="@string/title_activity_registration"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activity.individual.IndividualHomeActivity"
@@ -43,6 +41,7 @@
         <activity android:name=".activity.individual.IndividualCreatedRunsActivity" />
         <activity android:name=".activity.individual.IndividualWatchedRunsActivity" />
         <activity android:name=".activity.individual.IndividualEnrolledRunsActivity" />
+        <activity android:name=".activity.individual.IndividualSearchRunsActivity" />
         <activity android:name=".activity.individual.IndividualNewRunActivity" />
         <activity android:name=".activity.ChangeCredentialsActivity"></activity>
     </application>
