--- a/software/server/src/main/resources/application.properties
+++ b/software/server/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/trackme_db
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+spring.datasource.url=jdbc:postgresql://localhost:5432/trackme_db
 spring.datasource.username=trackmeadmin
 spring.datasource.password=password
