--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 jobs:
      include:
-             stage: build
+             - stage: "Server build"
              name: "Server"
-             language: java
-                     jdk:
-                      - oraclejdk8
+                  language: java
+                          jdk:
+                           - oraclejdk8
 
                      cache:
                        directories:
@@ -18,11 +18,11 @@ jobs:
                      script:
                       - ./mvnw package
               
-              stage: build
+              - stage: "Client build"
               name: "Client"
-              language: java
-                      jdk:
-                       - oraclejdk8
+                   language: java
+                           jdk:
+                            - oraclejdk8
 
                       cache:
                         directories:
