--- a/.travis.yml
+++ b/.travis.yml
@@ -7,22 +7,15 @@ cache:
           - $HOME/.m2
 jobs:
      include:
-             - stage: "Server build"
+             - stage: build
              name: "Server"
-                     before_install:
+                     script:
                       - cd software/server
                       - chmod +x mvnw
-
-                     install: true
-                     script:
                       - ./mvnw package
               
-              - stage: "Client build"
               name: "Client"
-                      before_install:
+                      script:
                        - cd software/client
                        - chmod +x gradlew
-
-                      install: true
-                      script:
                        - ./gradlew assembleDebug
