--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,18 @@
 language: java
-  jdk:
-     - oraclejdk8
+  jdk: oraclejdk8
 
 cache:
-     directories:
-          - $HOME/.m2
+  directories:
+    - $HOME/.m2
+
 jobs:
-     include:
-            - script:
-                - cd software/server
-                - chmod +x mvnw
-                - ./mvnw package
+  include:
+    - script:
+      - cd software/server
+      - chmod +x mvnw
+      - ./mvnw package
                       
-            - script:
-                 - cd software/client
-                 - chmod +x gradlew
-                 - ./gradlew assembleDebug
+    - script:
+      - cd software/client
+      - chmod +x gradlew
+      - ./gradlew assembleDebug
