--- a/.travis.yml
+++ b/.travis.yml
@@ -10,13 +10,13 @@ matrix:
         - ./mvnw package
 
     - language: android
-      jdk: openjdk7
+      jdk: oraclejdk7
       android:
         components:
           - android-28
           - extra-google-google_play_services
       before_script:
-        - jdk_switcher use openjdk7
+        - jdk_switcher use oraclejdk7
         - cd software/client
         - chmod +x gradlew
       script:
