--- a/software/client/app/src/main/AndroidManifest.xml
+++ b/software/client/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/trackme_logo"
+        android:icon="@drawable/trackme_small_logo"
         android:label="@string/app_name"
         android:roundIcon="@drawable/trackme_logo"
         android:supportsRtl="true"
@@ -17,14 +17,9 @@
         <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.LoginActivity" />
-        <activity
-            android:name=".activity.RegistrationActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activity.individual.IndividualHomeActivity"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -33,18 +28,18 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activity.thirdparty.ThirdPartyThirdPartyRequestActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".activity.thirdparty.ThirdPartyViewDataActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".activity.thirdparty.ThirdPartyViewDataActivity"/>
+        <activity android:name=".activity.thirdparty.ThirdPartyHealthDataActivity"/>
         <activity android:name=".activity.individual.IndividualCreateMapActivity" />
         <activity android:name=".activity.individual.IndividualCreatedRunsActivity" />
         <activity android:name=".activity.individual.IndividualWatchedRunsActivity" />
         <activity android:name=".activity.individual.IndividualEnrolledRunsActivity" />
         <activity android:name=".activity.individual.IndividualSearchRunsActivity" />
         <activity android:name=".activity.individual.IndividualNewRunActivity" />
+        <activity android:name=".activity.LoginActivity" />
+        <activity android:name=".activity.RegistrationActivity"/>
         <activity android:name=".activity.ChangeCredentialsActivity" />
-        <activity android:name=".activity.thirdparty.ThirdPartyHealthDataActivity"/>
         <activity android:name=".activity.DateActivity"/>
         <activity android:name=".activity.TimeActivity"/>
     </application>
