--- a/software/server/src/main/resources/application.properties
+++ b/software/server/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.datasource.url=jdbc:postgresql://localhost:5432/trackme_db
 spring.datasource.username=trackmeadmin
 spring.datasource.password=password
+spring.datasource.hikari.minimumIdle=1
+spring.datasource.hikari.maximumPoolSize=20
+spring.datasource.hikari.idleTimeout=300
+spring.datasource.hikari.maxLifetime=50000
+spring.datasource.hikari.connectionTimeout=30000
