--- a/software/client/app/src/main/AndroidManifest.xml
+++ b/software/client/app/src/main/AndroidManifest.xml
@@ -38,7 +38,8 @@
         <activity android:name=".activity.individual.IndividualSearchRunsActivity" />
         <activity android:name=".activity.individual.IndividualNewRunActivity" />
         <activity android:name=".activity.LoginActivity" />
-        <activity android:name=".activity.RegistrationActivity"/>
+        <activity android:name=".activity.RegistrationActivity"
+                  android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".activity.ChangeCredentialsActivity" />
         <activity android:name=".activity.DateActivity"/>
         <activity android:name=".activity.TimeActivity"/>
