--- a/software/client/app/build.gradle
+++ b/software/client/app/build.gradle
@@ -54,7 +54,7 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.squareup.okhttp3:okhttp:3.12.0'
-    implementation 'com.google.android.gms:play-services-wearable:+'
+    implementation 'com.google.android.gms:play-services-wearable:16.0.1'
     implementation 'org.osmdroid:osmdroid-android:6.0.2'
     implementation 'com.github.MKergall:osmbonuspack:6.5.2'
     implementation 'com.jjoe64:graphview:4.2.2'
@@ -62,5 +62,5 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:2.7.22'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    androidTestImplementation 'org.mockito:mockito-core:2.7.22'
+    androidTestImplementation 'org.mockito:mockito-android:2.7.22'
 }
