--- a/software/client/app/src/main/AndroidManifest.xml
+++ b/software/client/app/src/main/AndroidManifest.xml
@@ -20,20 +20,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version"/>
-        <activity
-            android:name=".activity.individual.IndividualHomeActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".activity.thirdparty.ThirdPartyHomeActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".activity.thirdparty.ThirdPartyThirdPartyRequestActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".activity.individual.IndividualHomeActivity"
+                  android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity android:name=".activity.thirdparty.ThirdPartyHomeActivity"
+                  android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity android:name=".activity.thirdparty.ThirdPartyThirdPartyRequestActivity"
+                  android:theme="@style/AppTheme.NoActionBar"/>
+
         <activity android:name=".activity.thirdparty.ThirdPartyViewDataActivity"/>
-        <activity android:name=".activity.thirdparty.ThirdPartyHealthDataActivity"/>
+        <activity android:name=".activity.thirdparty.ThirdPartyHealthDataActivity"
+                  android:theme="@style/AppTheme.NoActionBar"/>
+
         <activity android:name=".activity.individual.IndividualCreateMapActivity" />
         <activity android:name=".activity.individual.IndividualCreatedRunsActivity" />
         <activity android:name=".activity.individual.IndividualWatchedRunsActivity" />
@@ -43,6 +42,7 @@
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.RegistrationActivity"
                   android:theme="@style/AppTheme.NoActionBar" />
+
         <activity android:name=".activity.ChangeCredentialsActivity" />
         <activity android:name=".activity.DateActivity"/>
         <activity android:name=".activity.TimeActivity"/>
