--- a/software/client/app/build.gradle
+++ b/software/client/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.squareup.okhttp3:okhttp:3.12.0'
     implementation 'com.google.android.gms:play-services-wearable:16.0.1'
+    implementation 'com.google.android.gms:play-services-location:11.0.4'
     implementation 'org.osmdroid:osmdroid-android:6.0.2'
     implementation 'com.github.MKergall:osmbonuspack:6.5.2'
     implementation 'com.jjoe64:graphview:4.2.2'
