--- a/software/client/app/src/main/AndroidManifest.xml
+++ b/software/client/app/src/main/AndroidManifest.xml
@@ -46,6 +46,8 @@
         <activity android:name=".activity.ChangeCredentialsActivity" />
         <activity android:name=".activity.DateActivity"/>
         <activity android:name=".activity.TimeActivity"/>
+        <service
+            android:name=".service.SendPositionService" />
     </application>
 
 </manifest>
