health data service

--- a/software/client/app/src/main/AndroidManifest.xml
+++ b/software/client/app/src/main/AndroidManifest.xml
@@ -52,6 +52,7 @@
 
         <activity android:name=".activity.DateActivity"/>
         <activity android:name=".activity.TimeActivity"/>
+        <service  android:name=".service.SendHealthDataService" />
         <service  android:name=".service.SendPositionService" />
     </application>
 
