--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ matrix:
         - cd software/server
         - chmod +x mvnw
       script:
-        - ./mvnw package
+        - ./mvnw package test
       after_success:
         - bash <(curl -s https://codecov.io/bash) -t $CODECOV_TOKEN
 
