--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ matrix:
         - cd software/server
         - chmod +x mvnw
         - psql -c 'create database trackme_db;' -U postgres
-        - psql -c 'create user trackmeadmin with password "password";' -U postgres
+        - psql -c 'create user trackmeadmin with password password;' -U postgres
         - psql -c 'grant all privileges on database trackme_db to trackmeadmin;' -U postgres
       script:
         - ./mvnw package
