--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,9 @@ matrix:
       before_script:
         - cd software/server
         - chmod +x mvnw
-        - psql -c 'create database trackme_db;' -U postgres
-        - psql -c 'create user trackmeadmin with password password;' -U postgres
-        - psql -c 'grant all privileges on database trackme_db to trackmeadmin;' -U postgres
+        - create database trackme_db; | psql -U postgres
+        - create user trackmeadmin with password password; | psql -U postgres
+        - grant all privileges on database trackme_db to trackmeadmin; | psql -U postgres
       script:
         - ./mvnw package
       after_success:
